# mini-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
engine/: CMakeLists.txt
engine/include/mini-engine/: application.hpp  component_pool.hpp  engine.hpp  entity.hpp  registry.hpp
engine/include/mini-engine/core/: application.hpp  engine.hpp
engine/include/mini-engine/ecs/: components.hpp
engine/include/mini-engine/input/: input.hpp
engine/include/mini-engine/render/: assets.hpp  material.hpp  mesh.hpp  orthographic_camera.hpp  perspective_camera.hpp  renderer.hpp
engine/include/mini-engine/scene/: scene.hpp
engine/include/mini-engine/systems/: render_system.hpp
engine/src/: engine.cpp  input.cpp
engine/src/core/: engine.cpp
engine/src/input/: input.cpp
engine/src/render/: mesh.cpp  orthographic_camera.cpp  perspective_camera.cpp  renderer.cpp
engine/src/src/: render_system.cpp
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: shader.frag  shader.vert  texture.frag  texture.vert
sandbox/include/sandbox/core/: game.hpp
sandbox/include/sandbox/scene/: testscene.hpp
sandbox/include/sandbox/systems/: camera_movement.hpp  cube_rotation.hpp
sandbox/src/: main.cpp  testscene.cpp
sandbox/src/core/: game.cpp
sandbox/src/scene/: testscene.cpp
sandbox/src/systems/: camera_movement.cpp  cube_rotation.cpp
